--- a/index.html
+++ b/index.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--Metadata-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Tirth Prajapati">
-    <meta name="description" content="Week_06">
+    <meta name="description" content="In class activity 3 (Ice03)">
+    <!--Title-->
     <title>Home</title>
 
-
-    <link rel="stylesheet" href= "./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!--External Stylesheets-->
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.css">
     <link rel="stylesheet" href="scripts/app.js">
-    <link rel="stylesheet" href = "content/app.css">
-    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.css">
+    <link rel="stylesheet" href="content/app.css">
+
 </head>
 <body>
 
+<!--Header Placeholder-->
 <header></header>
 
-<main class = container>
-    <h1 class = "mb-5">Welcome to My Site!</h1>
-    <button id ="AboutUsBtn" class ="btn btn-primary">About Us</button>
-</main>
+<!--Main Content Container-->
+<main class="container"></main>
 
+<!--Footer Placeholder-->
+<footer></footer>
+
+<!--External Scripts-->
+<script src="./scripts/app.js"></script>
 <script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src= "./scripts/app.js"></script>
+<script src="./scripts/namespace.js"></script>
+<script src="./scripts/router.js"></script>
+<script src="./scripts/user.js"></script>
+<script src="./scripts/contact.js"></script>
+
 </body>
 </html>
